WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
73756
Fix WebPImageDecoder decoder leak
https://bugs.webkit.org/show_bug.cgi?id=73756
Summary
Fix WebPImageDecoder decoder leak
noel gordon
Reported
2011-12-03 17:12:50 PST
WebPImageDecoder allocates a decoder for progressive decodes, but never deletes it.
Attachments
Patch
(1.45 KB, patch)
2011-12-03 17:15 PST
,
noel gordon
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
noel gordon
Comment 1
2011-12-03 17:15:48 PST
Created
attachment 117777
[details]
Patch
Andreas Kling
Comment 2
2011-12-03 20:36:10 PST
Comment on
attachment 117777
[details]
Patch LGTM.
WebKit Review Bot
Comment 3
2011-12-03 22:46:23 PST
Comment on
attachment 117777
[details]
Patch Clearing flags on attachment: 117777 Committed
r101948
: <
http://trac.webkit.org/changeset/101948
>
WebKit Review Bot
Comment 4
2011-12-03 22:46:27 PST
All reviewed patches have been landed. Closing bug.
Pascal Massimino
Comment 5
2011-12-03 23:35:13 PST
Good catch, thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug