Fix WebPImageDecoder decoder leak. https://bugs.webkit.org/show_bug.cgi?id=73756

Reviewed by Andreas Kling.

Delete the m_decoder member in the destructor if needed with WebPIDelete.

No new tests, it's valgrind territory.

* platform/image-decoders/webp/WEBPImageDecoder.cpp:
(WebCore::WEBPImageDecoder::~WEBPImageDecoder):


Canonical link: https://commits.webkit.org/90411@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101948 268f45cc-cd09-0410-ab3c-d52691b4dbfc